# fastbdt2onnx

./: .gitignore  .gitmodules  FastBDTv5.txt  README.md  fastbdt_onnx.ipynb  pyproject.toml  run_fastbdt.py  run_onnx.py  tests.py
benchmark/: run_onnx.py
src/fastbdt2onnx/: __init__.py  bdt.py  convert.py
